--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@gorhom/bottom-sheet": "4",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.0.7",
+    "@shopify/restyle": "^1.4.0",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
@@ -24,14 +29,21 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
+    "firebase": "8.2.3",
+    "iconsax-react-native": "^0.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-reanimated": "~2.2.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-simple-line-icons": "^1.0.8",
+    "zustand": "^3.5.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
