--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@react-navigation/stack": "^6.0.7",
     "@shopify/restyle": "^1.4.0",
     "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
+    "expo-app-loading": "1.1.2",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-linking": "~2.3.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
