--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
-    "iconsax-react-native": "^0.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -39,8 +38,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.5",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-simple-line-icons": "^1.0.8",
@@ -50,7 +48,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "jest-expo": "~41.0.0-beta.0",
+    "jest-expo": "^43.0.1",
     "typescript": "~4.0.0"
   },
   "private": true
