--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.1.6",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@shopify/restyle": "^1.4.0",
@@ -32,6 +33,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
+    "iconsax-react-native": "^0.0.7",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -39,9 +41,12 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.1",
     "react-native-modal": "^13.0.0",
+    "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "^0.17.5",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
