--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
