--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
+    "framer-motion": "^6.2.3",
     "iconsax-react-native": "^0.0.7",
     "moment": "^2.29.1",
     "react": "16.13.1",
