--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.4.1",
     "@react-navigation/stack": "^6.0.7",
     "@shopify/restyle": "^1.4.0",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
     "expo-asset": "~8.3.2",
     "expo-constants": "~11.0.1",
+    "expo-error-recovery": "~2.2.0",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-linking": "~2.3.1",
