update-deprecated-dependencies

--- a/app.json
+++ b/app.json
@@ -25,13 +25,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.lucafiorentino.BonsaipflegeApp"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-image-picker"
+      "expo-image-picker",
+      "expo-asset",
+      "expo-font"
     ],
     "description": ""
   }
