--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -12,55 +12,69 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@gorhom/bottom-sheet": "4",
-    "@react-native-community/datetimepicker": "3.5.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/drawer": "^6.1.6",
-    "@react-navigation/material-top-tabs": "^6.0.6",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^6.0.7",
-    "@shopify/restyle": "^1.4.0",
-    "expo": "~42.0.1",
-    "expo-app-loading": "1.1.2",
-    "expo-asset": "~8.3.2",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
-    "firebase": "8.2.3",
-    "iconsax-react-native": "^0.0.7",
-    "moment": "^2.29.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.1",
-    "react-native-modal": "^13.0.0",
-    "react-native-pager-view": "5.0.12",
-    "react-native-reanimated": "~2.2.0",
+    "@expo/cli": "^0.18.30",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/metro-config": "^0.18.11",
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/prebuild-config": "~7.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@shopify/restyle": "^2.4.4",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "^51.0.37",
+    "expo-asset": "^10.0.10",
+    "expo-camera": "^15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-font": "^12.0.10",
+    "expo-image": "^1.13.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-modules-autolinking": "~1.11.0",
+    "expo-splash-screen": "^0.27.6",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^10.14.0",
+    "iconsax-react-native": "^0.0.8",
+    "moment": "^2.30.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-tab-view": "^3.1.1",
-    "react-native-web": "^0.17.5",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.12",
+    "react-navigation": "^5.0.0",
     "react-simple-line-icons": "^1.0.8",
-    "uuid": "^8.3.2",
-    "zustand": "^3.5.12"
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "jest-expo": "^43.0.1",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.25.7",
+    "@babel/plugin-transform-private-methods": "^7.25.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
+    "@babel/plugin-transform-react-jsx-source": "^7.25.7",
+    "@types/firebase": "^3.2.1",
+    "@types/react": "~18.2.79",
+    "@types/react-native": "^0.73.0",
+    "babel-preset-expo": "^11.0.15",
+    "jest-expo": "~51.0.4",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
