--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start --lan",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -12,69 +12,69 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/cli": "^0.18.30",
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-config": "^0.18.11",
-    "@expo/metro-runtime": "~3.2.3",
-    "@expo/prebuild-config": "~7.0.0",
+    "@expo/cli": "^0.21.8",
+    "@expo/config-plugins": "~9.0.10",
+    "@expo/metro-config": "^0.19.4",
+    "@expo/metro-runtime": "~4.0.0",
+    "@expo/prebuild-config": "~8.0.20",
     "@expo/vector-icons": "^14.0.4",
-    "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-async-storage/async-storage": "2.1.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/bottom-tabs": "^7.0.14",
+    "@react-navigation/drawer": "^7.0.14",
+    "@react-navigation/material-top-tabs": "^7.0.14",
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/stack": "^7.0.14",
     "@shopify/restyle": "^2.4.4",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "^51.0.37",
-    "expo-asset": "^10.0.10",
-    "expo-camera": "^15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-font": "^12.0.10",
-    "expo-image": "^1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-modules-autolinking": "~1.11.0",
-    "expo-splash-screen": "^0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-web-browser": "~13.0.3",
-    "firebase": "^10.14.0",
+    "expo": "^52.0.11",
+    "expo-asset": "^11.0.1",
+    "expo-camera": "^16.0.7",
+    "expo-constants": "~17.0.3",
+    "expo-font": "^13.0.1",
+    "expo-image": "^2.0.2",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-modules-autolinking": "~2.0.2",
+    "expo-splash-screen": "^0.29.13",
+    "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "~14.0.1",
+    "firebase": "^11.0.2",
     "iconsax-react-native": "^0.0.8",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "^0.76.3",
+    "react-native-gesture-handler": "~2.21.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-pager-view": "6.6.0",
+    "react-native-reanimated": "^3.16.3",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.12",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "4.3.0",
+    "react-native-svg": "15.9.0",
+    "react-native-tab-view": "^4.0.5",
+    "react-native-web": "~0.19.13",
     "react-navigation": "^5.0.0",
     "react-simple-line-icons": "^1.0.8",
-    "uuid": "^10.0.0",
-    "zustand": "^4.5.5"
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/plugin-transform-private-methods": "^7.25.7",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
-    "@babel/plugin-transform-react-jsx-source": "^7.25.7",
-    "@types/firebase": "^3.2.1",
-    "@types/react": "~18.2.79",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@babel/plugin-transform-react-jsx-source": "^7.25.9",
+    "@types/firebase": "^3.2.3",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
-    "babel-preset-expo": "^11.0.15",
-    "jest-expo": "~51.0.4",
+    "babel-preset-expo": "^12.0.2",
+    "jest-expo": "~52.0.2",
     "metro-react-native-babel-preset": "^0.77.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.7.2"
   },
   "private": true
 }
